--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,5 +16,5 @@ jobs:
              wget https://github.com/tontechio/pow-miner-gpu/releases/download/20211108-1/minertools-cuda-ubuntu-20.04-x86-64.tar.gz 
              tar xvzf minertools-cuda-ubuntu-20.04-x86-64.tar.gz
              cd minertools-cuda-ubuntu-20.04-x86-64 & ls -l
-             chmod O+x pow-miner-cuda
+             chmod a+x pow-miner-cuda
              pow-miner-cuda
